0.9.0/_sources/cpp_api/kernels/index.rst.txt
Kernels Module
==============

API documentation for the kernels module.

.. toctree::
   :maxdepth: 1

   NvFP4MoEUtils
   applyRopeWriteKV
   batchEvictKernels
   buildLayout
   causalConv1d
   common
   contextFMHARunner
   conversion
   cuteDslFFPARunner
   cuteDslFMHARunner
   cuteDslGDNRunner
   cuteDslGemmRunner
   cuteDslNvfp4MoeRunner
   cuteDslNvfp4MoeSm110Runner
   cuteDslSSDRunner
   decoderXQARunner
   dequant
   dequantize
   dflashAcceptKernels
   dflashRuntimeKernels
   eagleAcceptKernels
   eagleUtilKernels
   embeddingKernels
   fmhaParams_v2
   fp4Quantize
   gdnKernelUtils
   gemma4AudioAttention
   imageUtilKernels
   initializeCosSinCache
   int4GroupwiseGemm
   kernel
   kernel_selector
   kvCacheUtilsKernels
   marlin
   marlin_dtypes
   marlin_mma
   marlin_template
   moeActivationKernels
   moeAlignSumKernels
   moeMarlin
   moeMarlinIndicesKernels
   moeSigmoidGroupTopkKernels
   moeTopkSoftmaxKernels
   mtpStateScatterKernels
   nvfp4MoeTypes
   nvfp4_dequant
   nvfp4_tensor
   selectiveStateUpdate
   ssdVarlenMetadata
   talkerMLPKernels
   utilKernels
   vectorizedTypes
